--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
         <main>
-            <h1>LensFlares Website</h1>
+            <h1>SASNEWS's Test</h1>
             <h3>Dive into another skill</h3>
         </main>
     </body>
